fixed vertical scroll bug on mobile/messages

--- a/frontend/src/pages/messages/Messages.scss
+++ b/frontend/src/pages/messages/Messages.scss
@@ -82,7 +82,7 @@
 
 #inbox {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 55px);
     border-right: 1px solid #888;
     display: flex;
     flex-direction: column;
@@ -92,7 +92,7 @@
     // flex: 1 1 auto;
     flex-grow: 1;
     overflow-y: scroll;
-    height: 300px;
+    // height: 300px;
 }
 
 .inbox-header {
@@ -107,7 +107,11 @@
 }
 
 #messages_page {
-    width: auto; /* mobile first! */
+    // width: auto; /* mobile first! */
+}
+
+.hacky-hider {
+    overflow-y: hidden !important;
 }
 
 #messages_aside {
@@ -204,5 +208,11 @@
     #messages_page {
         width: calc(100% - 100px);
         // border: 2px solid yellow;
+    }
+}
+
+@media (min-width: $mobile-sized) {
+    #inbox {
+        height: 100vh;
     }
 }
